--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "Besofty\\Web\\Accounts\\Models\\": "app/Http/Models/"
+            "Besofty\\Web\\Accounts\\Models\\": "app/Http/Models/",
+            "Besofty\\Web\\Accounts\\Middleware\\": "app/Http/Middleware/"
         }
     },
     "autoload-dev": {
